--- a/src/main/webapp/script/area/Create.xhtml
+++ b/src/main/webapp/script/area/Create.xhtml
@@ -62,11 +62,11 @@
 
                     <f:facet name="footer">
                         <p:toolbar>  
-                            <p:toolbarGroup align="left">   
+                            <f:facet name="left">   
                                 <p:commandButton action="#{areaController.create}" value="#{bundle.CreateAreaSaveLink}" ajax="false" icon="ui-icon-disk"/>        
                                 <p:separator/>                              
                                 <p:commandButton action="#{areaController.prepareList}" value="Volver" immediate="true" ajax="false" icon="ui-icon-folder-open"/>
-                            </p:toolbarGroup>  
+                            </f:facet>  
 
 
 
