--- a/src/main/webapp/script/canal/List.xhtml
+++ b/src/main/webapp/script/canal/List.xhtml
@@ -74,7 +74,7 @@
 
                         <f:facet name="footer">
                             <p:toolbar style="border: none;">
-                                <p:toolbarGroup align="center">
+                                <f:facet name="left">
 
                                     <p:outputLabel value="Páginas de "/>
 
@@ -110,7 +110,7 @@
                                                     update=":formAddEdit"/>
 
                                     </p:menuButton>
-                                </p:toolbarGroup>
+                                </f:facet>
                             </p:toolbar>
 
                         </f:facet> 
