--- a/src/main/webapp/script/prioridad/List.xhtml
+++ b/src/main/webapp/script/prioridad/List.xhtml
@@ -122,7 +122,7 @@
                                     <p:separator/>
                                     <p:commandButton ajax="false" action="#{prioridadController.prepareCreate}" value="#{bundle.ListPrioridadCreateLink}" icon="ui-icon ui-icon-plus" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>
 
-                                </p:toolbarGroup>
+                                </f:facet>
                             </p:toolbar>
                         </f:facet>
 
