--- a/src/main/webapp/script/reglaTrigger/List.xhtml
+++ b/src/main/webapp/script/reglaTrigger/List.xhtml
@@ -99,7 +99,7 @@
 
                     <f:facet name="footer">
                         <p:toolbar style="border: none;">
-                            <p:toolbarGroup align="center">
+                            <f:facet name="left">
 
                                 <p:outputLabel value="Páginas de "/>
                                 <p:selectOneMenu id="cant" value="#{reglaTriggerController.paginationPageSize}" style="top: 7px" >
@@ -121,7 +121,7 @@
                                 <p:commandButton ajax="false" action="#{reglaTriggerController.updateAllJustToFixLabels()}" 
                                                  value="UPDATE LABELS" rendered="#{filtroAcceso.esUsuarioSistema()}" />
 
-                            </p:toolbarGroup>
+                            </f:facet>
                         </p:toolbar>
                     </f:facet>
 
