--- a/src/main/webapp/script/rol/Edit.xhtml
+++ b/src/main/webapp/script/rol/Edit.xhtml
@@ -39,17 +39,17 @@
                     <f:facet name="footer">
                         
                           <p:toolbar>  
-                            <p:toolbarGroup align="left">   
+                            <f:facet name="left">   
                                 <p:commandButton ajax="false" action="#{rolController.update}" value="#{bundle.EditRolSaveLink}" icon="ui-icon-disk" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>
                                 <p:separator/>
                                 <p:commandButton ajax="false" action="View" value="#{bundle.EditRolViewLink}" immediate="true" icon="ui-icon-document"/>
                                  <p:commandButton ajax="false" action="#{rolController.prepareList}" value="#{bundle.EditRolShowAllLink}" immediate="true" icon="ui-icon-folder-open"/>
-                            </p:toolbarGroup>  
+                            </f:facet>  
 
-                            <p:toolbarGroup align="right">   
+                            <f:facet name="right">   
                                 <p:separator/>
                                 <p:commandButton id="showDialogButton" value="#{bundle.ViewRolDestroyLink}" onclick="PF('confirmation').show()" disabled="#{not rolController.puedeEditar(rolController.selected)}"  icon="ui-icon ui-icon-trash" />         
-                            </p:toolbarGroup>  
+                            </f:facet>  
 
                         </p:toolbar>
                         
