--- a/src/main/webapp/script/rol/List.xhtml
+++ b/src/main/webapp/script/rol/List.xhtml
@@ -53,7 +53,7 @@
 
                         <f:facet name="footer">
                             <p:toolbar style="border: none;">
-                                <p:toolbarGroup align="center">
+                                <f:facet name="left">
 
                                     <p:outputLabel value="Páginas de "/>
                                     <p:selectOneMenu id="cant" value="#{rolController.paginationPageSize}" style="top: 7px">
@@ -73,7 +73,7 @@
                                     <p:separator/>
                                     <p:commandButton ajax="false" action="#{rolController.prepareCreate}" value="Crear rol" icon="ui-icon ui-icon-plus" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>
 
-                                </p:toolbarGroup>
+                                </f:facet>
                             </p:toolbar>
 
                         </f:facet> 
