--- a/src/main/webapp/script/tipoCaso/List.xhtml
+++ b/src/main/webapp/script/tipoCaso/List.xhtml
@@ -79,7 +79,7 @@
                                     <p:commandButton ajax="false" action="#{tipoCasoController.prepareCreate}" value="#{bundle.ListTipoCasoCreateLink}"
                                                      rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" icon="ui-icon ui-icon-plus"/>
 
-                                </p:toolbarGroup>
+                                </f:facet>
                             </p:toolbar>
 
 
