--- a/src/main/webapp/script/grupo/Create.xhtml
+++ b/src/main/webapp/script/grupo/Create.xhtml
@@ -64,11 +64,11 @@
                     <f:facet name="footer">
 
                         <p:toolbar>  
-                            <p:toolbarGroup align="left">   
+                            <f:facet name="left">   
                                 <p:commandButton action="#{grupoController.create}" value="#{bundle.CreateGrupoSaveLink}" ajax="false" icon="ui-icon-disk" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>  
                                 <p:separator/>                         
                                 <p:commandButton action="#{grupoController.prepareList}" value="#{bundle.showAll}" immediate="true" ajax="false" icon="ui-icon-folder-open"/>
-                            </p:toolbarGroup>  
+                            </f:facet>  
 
                         </p:toolbar>
 
