--- a/src/main/webapp/script/producto/View.xhtml
+++ b/src/main/webapp/script/producto/View.xhtml
@@ -38,7 +38,7 @@
 
                     <f:facet name="footer">
                         <p:toolbar> 
-                            <p:toolbarGroup align="left">   
+                            <f:facet name="left">   
                                 <p:commandButton ajax="false" action="#{productoController.prepareCreate}" value="#{bundle.createNew}" icon="ui-icon ui-icon-plus" />
                                 <p:separator/>
                                 <p:commandButton ajax="false" action="Edit" value="#{bundle.edit}" icon="ui-icon ui-icon-pencil"/>
@@ -46,7 +46,7 @@
 
                                 <p:separator />  
                                 <p:commandButton  ajax="false" action="#{productoController.destroyAndView}" value="#{bundle.destroy}" icon="ui-icon ui-icon-trash"/>
-                            </p:toolbarGroup>  
+                            </f:facet>  
                         </p:toolbar>
                     </f:facet>
 
