--- a/src/main/webapp/script/rol/View.xhtml
+++ b/src/main/webapp/script/rol/View.xhtml
@@ -56,16 +56,16 @@
                     <f:facet name="footer">        
 
                         <p:toolbar>  
-                            <p:toolbarGroup align="left">   
+                            <f:facet name="left">   
                                 <p:commandButton ajax="false" action="Edit" disabled="#{not rolController.puedeEditar(rolController.selected)}" value="#{bundle.ViewRolEditLink}" icon="ui-icon ui-icon-pencil"/>
                                 <p:separator/>
                                 <p:commandButton ajax="false" action="#{rolController.prepareList}" value="#{bundle.ViewRolShowAllLink}" icon="ui-icon-folder-open"/>
-                            </p:toolbarGroup>  
+                            </f:facet>  
 
-                            <p:toolbarGroup align="right">   
+                            <f:facet name="right">   
                                 <p:separator/>
                                 <p:commandButton id="showDialogButton" value="#{bundle.ViewRolDestroyLink}" onclick="PF('confirmation').show()" disabled="#{not rolController.puedeEditar(rolController.selected)}"  icon="ui-icon ui-icon-trash" />         
-                            </p:toolbarGroup>  
+                            </f:facet>  
 
                         </p:toolbar>
 
